# cpack-test

./: .gitignore  CMakeLists.txt  README.html  README.md
make-deb/: mkdeb.sh  mkmd5sum.sh
src/: resource.h  test-app.cxx  test-app.hxx  test-app.rc
src/fgx-installer/: .gitignore  CMakeLists.txt  README.md  fgx-installer.pro  main.cpp  mainwindow.cpp  mainwindow.h
src/fgx-installer/aircraft/: aircrafttreewidget.cpp  aircrafttreewidget.h
src/fgx-installer/download/: downloadmanagerwidget.cpp  downloadmanagerwidget.h
src/fgx-installer/info/: machineinfowidget.cpp  machineinfowidget.h
src/fgx-installer/releases/: releaseeditdialog.cpp  releaseeditdialog.h  releaseswidget.cpp  releaseswidget.h
src/fgx-installer/resource/: icons.qrc
src/fgx-installer/xobjects/: servercall.cpp  servercall.h  xsettings.cpp  xsettings.h
src/fgx-installer/xwidgets/: xstatusbar.cpp  xstatusbar.h
src/lib/: sprtf.cxx  sprtf.hxx
win64/: .gitignore  build-me.bat  cmake-clean.txt
